refactor(search): code quality improvements
Replace manual SLF4J logger with @Slf4j, clean up FQN references,
use String.isBlank() in ExpandUtil.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>